--- a/PopcornReview/src/main/webapp/CSS/common.css
+++ b/PopcornReview/src/main/webapp/CSS/common.css
@@ -63,7 +63,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: 'Noto Sans KR', sans-serif;
-    background-color: var(--bg-overlay);
+    background-color: #0E1116;
     color: var(--text-white);
     font-size: 16px;
     line-height: 1.5;
@@ -183,6 +183,31 @@ header .search #searchInput::placeholder {
 
 .btn-login:hover {
     color: var(--color-background-darkest);
+    opacity: 0.9;
+    text-decoration: none;
+}
+
+.btn-user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto; /* 닉네임 길이에 따라 너비가 유연하게 변하도록 auto로 설정 */
+    min-width: 90px;
+    height: 44px;
+    padding: 0 1.2rem; /* 좌우 여백을 추가해줍니다 */
+    background-color: var(--btn-color);
+    color: var(--bg-overlay);
+    border-radius: 50px;
+    font-weight: var(--font-weight-bold);
+    font-size: var(--font-size-base);
+    text-decoration: none;
+    flex-shrink: 0;
+    transition: opacity 0.2s;
+    cursor: pointer;
+}
+
+.btn-user:hover {
+    color: var(--bg-overlay); /* 링크 호버 시 텍스트 색상 유지 */
     opacity: 0.9;
     text-decoration: none;
 }
